--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Browser | Multitasking for Developers</title>
-    <meta name="description" content="A tiling window manager for the web. Built with Electron and Node.js.">
+    <title>Grid Browser | Your Favorite Websites, All At Once</title>
+    <meta name="description" content="A grid-based web browser.">
     <style>
         :root {
             /* Color Palette */
